<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cinephile</string>

    <!-- Bottom Bar -->
    <string name="screen_watchlist">Watchlist</string>
    <string name="screen_explore">Explore</string>

    <!-- Placeholders -->
    <string name="placeholder">Hello World</string>
    <string name="placeholder_year">2020</string>
    <string name="placeholder_movie_title">Movie Title</string>
    <string name="placeholder_rating">90</string>
    <string name="placeholder_year_vert">2\n0\n2\n0</string>
    <string name="placeholder_description">description</string>
    <string name="placeholder_collection_title">collection title</string> <!-- TO DEPRECATE -->

    <!-- Button Text -->
    <string name="button_new">NEW</string>
    <string name="button_add">ADD</string>
    <string name="button_done">DONE</string>
    <string name="button_more">MORE</string>
    <string name="button_sort">SORT</string>
    <string name="button_filter">FILTER</string>
    <string name="button_search">SEARCH</string>
    <string name="button_confirm">CONFIRM</string>
    <string name="button_favourite">FAVOURITES</string>
    <string name="button_cancel" tools:ignore="ButtonCase">CANCEL</string>

    <!-- Explore Headings -->
    <string name="explore_playing">Now Playing</string>
    <string name="explore_upcoming">Upcoming</string>
    <string name="explore_popular">Popular</string>
    <string name="explore_rated">Top Rated</string>

    <!-- Content Description -->
    <string name="description_movie_poster">Movie poster</string>
    <string name="description_movie_backdrop">Movie backdrop</string>
    <string name="description_collection_image">Collection image</string>
    <string name="description_add_to_collection">Add to collection</string>
    <string name="description_added_to_collection">Added to collection</string>
    <string name="description_movie_card_poster">Image of movie poster for card</string>
    <string name="description_movie_card_button">Movie options</string>
    <string name="description_movie_seen">Movie has been seen</string>
    <string name="description_movie_hearted">Movie has been hearted</string>

    <!-- Prompts -->
    <string name="hint_search">Movie Title</string>
    <string name="hint_rating">Movie Rating</string>

    <string name="dialog_title_rating">Set Movie Rating:</string>
    <string name="dialog_title_delete">Would you like to delete:</string>
    <string name="dialog_title_new_collection">Create new collection</string>
    <string name="dialog_title_add_collection">Add or remove movie from your collections</string>

    <string name="prompt_empty_collections">"Looks like you have no movies in your list. \n Try checking out the Explore page."</string>
    <string name="prompt_no_collections">Looks like you have no collections.</string>
</resources>
