<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:visible="true"
        android:id="@+id/toolbar_search"
        android:icon="@drawable/icon_search"
        android:title="@string/button_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:visible="false"
        android:id="@+id/toolbar_add"
        android:icon="@drawable/icon_add"
        android:title="@string/button_add"
        app:showAsAction="always"/>

    <item
        android:visible="false"
        android:id="@+id/toolbar_favourite"
        android:checkable="true"
        android:title="@string/button_favourite"
        app:showAsAction="ifRoom"/>

</menu>