<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_card"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"

        android:text="@string/dialog_title_new_collection"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_collection_dialog_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder_collection_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="17sp"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/new_collection_dialog_button_confirm"
            style="@style/button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/accent"
            android:text="@string/button_confirm" />

        <Button
            android:id="@+id/new_collection_dialog_button_cancel"
            style="@style/button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/accent_red"
            android:text="@string/button_cancel" />
    </LinearLayout>
</LinearLayout>