<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="1dp"
    android:paddingVertical="2dp"
    android:paddingHorizontal="7dp"
    android:theme="@style/MyRecyclerItems">

    <ImageView
        android:id="@+id/rci_movie_list_img_poster"
        android:layout_width="55dp"
        android:layout_height="84dp"
        android:contentDescription="@string/description_movie_poster"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/rci_movie_list_text_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/rci_movie_list_img_poster"
        android:layout_toEndOf="@+id/rci_movie_list_img_poster"
        android:layout_marginStart="7dp"

        android:text="@string/placeholder_year" />

    <TextView
        android:id="@+id/rci_movie_list_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toStartOf="@+id/rci_movie_list_button_add"
        android:layout_toEndOf="@+id/rci_movie_list_img_poster"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"

        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="-1"

        android:text="@string/placeholder_movie_title" />

    <TextView
        android:id="@+id/rci_movie_list_text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@+id/rci_movie_list_img_poster"
        android:layout_toEndOf="@+id/rci_movie_list_img_poster"
        android:layout_marginStart="7dp"

        android:text="@string/placeholder_rating" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/rci_movie_list_button_add"
        android:layout_width="45dp"
        android:layout_height="45dp"

        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"

        android:src="@drawable/ic_add"
        android:tint="@color/colorTextPrimary"
        android:background="@android:color/transparent"/>


</RelativeLayout>