<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/component_icons_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="10dp"

        android:background="@drawable/background_card"
        android:backgroundTint="@color/accent"

        android:fontFamily="@font/cousine"
        android:letterSpacing=".1"

        android:paddingHorizontal="5dp"
        android:paddingVertical="2dp"

        android:text="@string/placeholder_rating"
        android:textFontWeight="900"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/background_card"
        android:backgroundTint="@color/accent"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/component_icons_seen"
            android:layout_width="16sp"
            android:layout_height="16sp"

            android:layout_margin="2dp"

            android:contentDescription="@string/description_movie_seen"
            android:src="@drawable/icon_seen" />

        <ImageView
            android:id="@+id/component_icons_heart"
            android:layout_width="16sp"
            android:layout_height="16sp"

            android:layout_margin="2dp"

            android:contentDescription="@string/description_movie_hearted"
            android:src="@drawable/icon_heart" />
    </LinearLayout>

</LinearLayout>