<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rci_mylist"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_27sdp"
    android:layout_marginBottom="1dp"
    android:paddingVertical="3dp"
    android:theme="@style/MyRecyclerItems">

    <CheckBox
        android:id="@+id/rci_mylist_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        style="@style/MyCheckboxStyle"/>

    <TextView
        android:id="@+id/rci_mylist_tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/rci_mylist_check"
        android:text="@string/placeholder_year" />

    <TextView
        android:id="@+id/rci_mylist_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerVertical="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_toStartOf="@+id/rci_mylist_tv_rating"
        android:layout_toEndOf="@+id/rci_mylist_tv_year"

        android:ellipsize="marquee"
        android:focusable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"

        android:text="@string/placeholder_movie_title" />

    <TextView
        android:id="@+id/rci_mylist_tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="7dp"
        android:maxLength="5"
        android:text="@string/placeholder_rating" />

</RelativeLayout>